# drakpdb

./: .flake8  .gitignore  README.md  drakpdb.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml  lint-test.yml  release.yml
drakpdb/: __init__.py  drakpdb.py  fetch_pdb.py  main.py  type_info.py
drakpdb/pdbparse/: README.md  __init__.py  dbgold.py  pdbparse.py  peinfo.py  symlookup.py
tests/: conftest.py  fetch_pdbs.py  requirements.txt  test_pdb.py
tests/pdbs/: pdbs.toml
