[build-system]
requires = [
    "setuptools >= 40.9.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "drakpdb"
version = "0.2.1"
description = "Helper library to generate DRAKVUF profiles."
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pefile>=2019.4.18",
    "construct<3.0",
    "requests",
    "tqdm",
]
requires-python = ">=3.8"

[project.scripts]
drakpdb = "drakpdb.main:main"

[tool.setuptools]
packages = ["drakpdb", "drakpdb.pdbparse", "drakpdb.pdbparse._undname"]

[tool.black]
exclude = "drakpdb/pdbparse/*"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
skip_glob = "drakpdb/pdbparse/*"

[tool.lint-python]
lint-version = "2"
source = "drakpdb/"
use-mypy = false
